# foresight

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  constants.h  evdev.cpp  evdev.cxx  evdev.h  evdev.ixx  eventio.cpp  eventio.h  foresight.service  intercept.cxx  intercept.ixx  keyboard.cpp  keyboard.cxx  keyboard.h  keyboard.ixx  main.cpp  main.cxx  provider.cpp  provider.h  translate.h  translate.ixx
apps/: CMakeLists.txt  README.md
apps/add-scroll/: CMakeLists.txt  README.md
apps/auto-typer/: CMakeLists.txt  README.md  auto-typer.cpp  auto-typer.sh
apps/flat-accelerate/: CMakeLists.txt  README.md  flat-accelerate.cpp
apps/gesture-redirect/: CMakeLists.txt  README.md
apps/ignore-big-jumps/: CMakeLists.txt  ignore-big-jumps.cpp
apps/long-press/: CMakeLists.txt  long-press.cpp
apps/mouse-mode/: CMakeLists.txt  README.md  mouse-mode.cpp
apps/on-gestures/: CMakeLists.txt  on-gesture.cpp
apps/pen2mice/: CMakeLists.txt  README.md  pen2mice.cpp
apps/scroll-redirect/: scroll.cpp
apps/x2y-redirect/: x2y.c
bash/: bash_runner.cxx  bash_runner.ixx
devices/: capabilities.ixx  classification.ixx  device_query.cxx  device_query.ixx  evdev.cxx  evdev.ixx  inputs-event-codes.ixx  key_codes.cxx  key_codes.ixx  queries.cxx  queries.ixx  udev.cxx  udev.ixx  uinput.cxx  uinput.ixx
docs/: Input Protocol.md  Multi-Touch Protocol.md
evdev/: evdev.cxx  evdev.ixx
examples/: CMakeLists.txt  README.md
examples/ignore-big-jumps/: README.md
examples/long-press/: README.md  long-press.cpp
examples/scroll-redirect/: CMakeLists.txt  README.md  scroll.cpp
examples/x2y-redirect/: CMakeLists.txt  README.md  x2y.c
intercept/: evdev.cxx  evdev.ixx  intercept.cxx  intercept.ixx
io/: liburing.ixx
lib/: event2unicode.cxx  event2unicode.ixx  how2type.cxx  how2type.ixx  mod_parser.cxx  mod_parser.ixx  xkb.cxx  xkb.ixx  xkb_compose.cxx  xkb_compose.ixx
main/: context.cxx  context.ixx  event.ixx  keyboard.cxx  keyboard.ixx  liburing.ixx  log.ixx  main.cxx  main.ixx  provider.cxx  provider.ixx  systemd.cxx  systemd.ixx  translate.ixx  utils.ixx
mods/: abs2rel.cxx  abs2rel.ixx  add_scroll.ixx  caps.ixx  context.cxx  context.ixx  context_vars.ixx  device_registry.cxx  device_registry.ixx  emitter.cxx  emitter.ixx  event.cxx  event.ixx  ignore.cxx  ignore.ixx  inout.ixx  intercept.cxx  intercept.ixx  keys_status.cxx  keys_status.ixx  lambda.ixx  modes.ixx  mods.ixx  momentum.cxx  momentum.ixx  mouse_status.ixx  on.cxx  on.ixx  output.ixx  quantifier.cxx  quantifier.ixx  rel_jumps.cxx  rel_jumps.ixx  replace.cxx  replace.ixx  router.ixx  smooth.ixx  stopper.ixx  typed.cxx  typed.ixx  (+3 more)
redirect/: redirect.ixx
tests/: CMakeLists.txt  bash_test.cxx  basic_test.cpp  basic_test.cxx  classification_test.cxx  lerp_test.cxx  momentum_test.cxx  queries_test.cxx  typed_test.cxx  udev_test.cxx  uinput_test.cxx  variable_test.cxx  velocity_test.cxx  xkb_test.cxx
tests/common/: tests_common_pch.hpp
tools/: gen-keys.awk  update.sh
uinput/: redirect.cxx  redirect.ixx  uinput.cxx  uinput.ixx
utils/: easings.ixx  hash.cxx  hash.ixx  strings.ixx
